# youjianxin-workspace

./: .gitignore  CLAUDE.md  README.md
ai-chat/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  chainlit.md  env.example  main.py  pyproject.toml
ai-chat/chat_agent/: __init__.py  builder.py  intent_classifier.py  servicer.py
ai-chat/chat_agent/prompts/: dating_summary_prompt.md  intent_classification.md  system.md  utils.py
ai-chat/core/: __init__.py  config.py  llm.py  models.py  time_utils.py
ai-chat/core/clients/: __init__.py  user_client.py
ai-chat/core/middlewares/: __init__.py  smart_router.py
ai-chat/core/nacos_client/: __init__.py  client.py  resolver.py
ai-chat/core/tools/: __init__.py  weather.py  web_reader.py  web_search.py
ai-chat/docs/: dh-persona-diversity.md  dynamic-prompt.md  grpc-integration.md  intent-recognition-design.md  memory-architecture.md  nacos-integration.md  restructure-vision-plan.md  smart-router-fallback.md  smart-router.md  vision-structured-output.md  web-search-tools.md
ai-chat/server/: __init__.py  __main__.py  bootstrap.py
ai-chat/vision_agent/: __init__.py  builder.py  schemas.py  servicer.py
ai-chat/vision_agent/prompts/: face_score_system.md  profile_photo_system.md  understand_system.md
deploy/: .env.deploy.example  docker-compose.dev.yml
docs/: dev-onboarding.md  im-service-design.md  local-infra-setup.md  match-service-prd-tech.md  mobile-gateway-design.md  payment-service-design.md  post-service-design.md  student-dev-guide.md  user-service-design.md
proto/chat/python/: pyproject.toml
proto/chat/python/dating_proto_youjianxin_chat/: chat_pb2.py  chat_pb2_grpc.py
(+515 files in other folders)
